--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
 name = "lcd-lcm1602-i2c"
 version = "0.1.0"
-edition = "2018"
 authors = ["Korbinian Maier <korbinian.maier@posteo.de>"]
 edition = "2018"
 description = "I2C driver for LM1602 LCD displays."
 homepage = "https://github.com/KuabeM/lcd-lcm1602-i2c.git"
 keywords = ["lcd", "LM1602", "embedded", "embedded-hal"]
-license = "MIT OR Apache-2.0"
+license = "WTFPL"
 readme = "README.md"
 repository = "https://github.com/KuabeM/lcd-lcm1602-i2c.git"
 
